# microservaluno/server/api/controllers/aluno/router.ts
@@ -1,0 +1,10 @@
+import express from 'express'
+import controller from './alunocontroller'
+
+export default express
+    .Router()
+    .get('/', controller.all)
+    .get('/:id', controller.getById)
+    .post('/', controller.post)
+    .put('/:id', controller.update)
+    .delete('/:id', controller.delete);
