# microservaluno/server/api/controllers/examples/aluno/router.ts
@@ -1,6 +1,0 @@
-import express from 'express'
-import controller from './alunocontroller'
-
-export default express
-    .Router()
-    .get('/', controller.all)
